# Weed

./: .env.development  .gitignore  config.yml  docker-compose.prod.yaml  docker-compose.yaml  docker-stack.yaml  nginx.conf  package-lock.json
.devcontainer/backend/: devcontainer.json
.devcontainer/bot/: devcontainer.json
.github/workflows/: deploy.yml
backend/: Dockerfile  economic.py  logs.txt  manage.py  pyproject.toml
backend/settings/: base.py  dev.py  prod.py
backend/tasks/: admin.py  api.py  checker.py  models.py  schemas.py
backend/tasks/migrations/: 0001_initial.py
backend/users/: admin.py  api.py  models.py  schemas.py
backend/users/migrations/: 0001_initial.py  0002_alter_referrals_options_remove_tguser_lastclaim_and_more.py  0003_game.py  0004_coin_alter_game_options.py  0005_discorduser.py
backend/weed/: asgi.py  logger.py  settings.py  urls.py  wsgi.py
bot/: main.py  pyproject.toml  texts.py  worker.py
bot/handlers/: start.py
bot/middlewares/: api.py
discord/: Dockerfile  main.py  pyproject.toml
discord/cogs/: init.py
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  telegram.d.ts
frontend/src/components/: index.ts
frontend/src/pages/: index.ts
frontend/src/routes/: PageRouter.tsx
frontend/src/store/: index.ts
frontend/src/utils/: api.ts  routes.ts
src/: App.tsx  index.css
src/assets/styles/: Friends.scss  Main.scss  Tasks.scss
src/store/: Slice.ts
(+27 files in other folders)
