[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Alexander Rykovskiy <alexander.rykovsky@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
