[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["Alexander Rykovskiy <a.rykovskiy02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
